// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button > renders correctly when disabled 1`] = `
<div>
  <button
    class="sc-bRKDuR bHjpxP sc-jJLAfE eMOURj"
    disabled=""
  >
    <div
      class="sc-kNOymR AyWek"
    >
      <div
        class="sc-lgpSej dtnxRg childrenContainer"
      >
        Click Me
      </div>
    </div>
  </button>
</div>
`;

exports[`Button > renders correctly when loading 1`] = `
<div>
  <button
    class="sc-bRKDuR bHjpxP sc-jJLAfE eMOURj"
    disabled=""
  >
    <div
      class="sc-hwkwBN HRaKY"
    >
      <svg
        class="sc-ggWZvA bAkxau"
        height="16"
        viewBox="0 0 60 32"
      >
        <g
          transform="translate(30,18.5455) translate(-30,-9)"
        >
          <path
            class="sc-dTvVRJ jLBpiK"
            d="M73.999,81.9767L73.6592,70.6087C73.6352,69.8071,73.1892,69.0806,72.4916,68.707C71.1747,68.0014,69.0105,67.648,66.0001,67.6467C62.9894,67.648,60.8254,68.0014,59.5084,68.707C58.8109,69.0806,58.3648,69.8071,58.3408,70.6087L58.001,81.9767C57.983,82.5754,58.2138,83.1538,58.6366,83.5705C60.0408,84.9546,62.4906,85.6467,65.986,85.6467C65.9907,85.6467,65.9953,85.6467,66.0001,85.6467C66.0047,85.6467,66.0094,85.6467,66.014,85.6467C69.5095,85.6467,71.9593,84.9546,73.3634,83.5705C73.7863,83.1538,74.0169,82.5754,73.999,81.9767"
            id="Marshmallow1"
            transform="translate(-58,-67.6467)"
          />
          <path
            class="sc-jwTyAe kHfTEG"
            d="M73.999,81.9767L73.6592,70.6087C73.6352,69.8071,73.1892,69.0806,72.4916,68.707C71.1747,68.0014,69.0105,67.648,66.0001,67.6467C62.9894,67.648,60.8254,68.0014,59.5084,68.707C58.8109,69.0806,58.3648,69.8071,58.3408,70.6087L58.001,81.9767C57.983,82.5754,58.2138,83.1538,58.6366,83.5705C60.0408,84.9546,62.4906,85.6467,65.986,85.6467C65.9907,85.6467,65.9953,85.6467,66.0001,85.6467C66.0047,85.6467,66.0094,85.6467,66.014,85.6467C69.5095,85.6467,71.9593,84.9546,73.3634,83.5705C73.7863,83.1538,74.0169,82.5754,73.999,81.9767"
            id="Marshmallow2"
            transform="translate(-36,-67.6467)"
          />
          <path
            class="sc-hjsuWn bjPPtv"
            d="M73.999,81.9767L73.6592,70.6087C73.6352,69.8071,73.1892,69.0806,72.4916,68.707C71.1747,68.0014,69.0105,67.648,66.0001,67.6467C62.9894,67.648,60.8254,68.0014,59.5084,68.707C58.8109,69.0806,58.3648,69.8071,58.3408,70.6087L58.001,81.9767C57.983,82.5754,58.2138,83.1538,58.6366,83.5705C60.0408,84.9546,62.4906,85.6467,65.986,85.6467C65.9907,85.6467,65.9953,85.6467,66.0001,85.6467C66.0047,85.6467,66.0094,85.6467,66.014,85.6467C69.5095,85.6467,71.9593,84.9546,73.3634,83.5705C73.7863,83.1538,74.0169,82.5754,73.999,81.9767"
            id="Marshmallow3"
            transform="translate(-14,-67.6467)"
          />
        </g>
      </svg>
    </div>
    <div
      class="sc-kNOymR AyVJp"
    >
      <div
        class="sc-lgpSej dtnxRg childrenContainer"
      >
        Loading
      </div>
    </div>
  </button>
</div>
`;

exports[`Button > renders correctly with a custom className 1`] = `
<div>
  <button
    class="sc-bRKDuR bHjpxP sc-jJLAfE kgFfue custom-class"
  >
    <div
      class="sc-kNOymR AyWek"
    >
      <div
        class="sc-lgpSej dtnxRg childrenContainer"
      >
        Click Me
      </div>
    </div>
  </button>
</div>
`;

exports[`Button > renders correctly with a custom type 1`] = `
<div>
  <button
    class="sc-bRKDuR bHjpxP sc-jJLAfE kgFfue"
    type="submit"
  >
    <div
      class="sc-kNOymR AyWek"
    >
      <div
        class="sc-lgpSej dtnxRg childrenContainer"
      >
        Submit
      </div>
    </div>
  </button>
</div>
`;

exports[`Button > renders correctly with an icon 1`] = `
<div>
  <button
    class="sc-bRKDuR bHjpxP sc-jJLAfE kgFfue"
  >
    <div
      class="sc-kNOymR cOHRID"
    >
      <span
        class="sc-bRKDuR bHjpxP sc-fhHczv XmxEI sc-dYwGCk ijOES"
        color="liquorice"
        data-testid="info-container"
        rotate="0"
        size="24"
      >
        <svg
          fill="none"
          height="100%"
          viewBox="0 0 24 24"
          width="100%"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M12 0C5.383 0 0 5.383 0 12s5.383 12 12 12 12-5.383 12-12S18.617 0 12 0zm-1 6.99a1 1 0 112 0c0 .553-.447 1.005-1 1.005-.553 0-1-.442-1-.995v-.01zM11 11a1 1 0 112 0v7a1 1 0 11-2 0v-7zm-9 1c0 5.514 4.486 10 10 10s10-4.486 10-10S17.514 2 12 2 2 6.486 2 12z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <div
        class="sc-lgpSej dtnxRg childrenContainer"
      >
        With Icon
      </div>
    </div>
  </button>
</div>
`;

exports[`Button > renders correctly with default props 1`] = `
<div>
  <button
    class="sc-bRKDuR bHjpxP sc-jJLAfE kgFfue"
  >
    <div
      class="sc-kNOymR AyWek"
    >
      <div
        class="sc-lgpSej dtnxRg childrenContainer"
      >
        Click Me
      </div>
    </div>
  </button>
</div>
`;

exports[`Button > renders correctly with forced width 1`] = `
<div>
  <button
    class="sc-bRKDuR bHjpxP sc-jJLAfE kQxtdL"
  >
    <div
      class="sc-kNOymR AyWek"
    >
      <div
        class="sc-lgpSej dtnxRg childrenContainer"
      >
        Forced Width
      </div>
    </div>
  </button>
</div>
`;

exports[`Button > renders correctly with primary styling 1`] = `
<div>
  <button
    class="sc-bRKDuR bHjpxP sc-jJLAfE cTCXtj"
  >
    <div
      class="sc-kNOymR AyWek"
    >
      <div
        class="sc-lgpSej dtnxRg childrenContainer"
      >
        Primary Button
      </div>
    </div>
  </button>
</div>
`;

exports[`Button > renders correctly with secondary styling 1`] = `
<div>
  <button
    class="sc-bRKDuR bHjpxP sc-jJLAfE dTAtDC"
  >
    <div
      class="sc-kNOymR AyWek"
    >
      <div
        class="sc-lgpSej dtnxRg childrenContainer"
      >
        Secondary Button
      </div>
    </div>
  </button>
</div>
`;

exports[`Button > renders correctly with small button styling 1`] = `
<div>
  <button
    class="sc-bRKDuR bHjpxP sc-jJLAfE dXnJco"
  >
    <div
      class="sc-kNOymR AyWek"
    >
      <div
        class="sc-lgpSej dtnxRg childrenContainer"
      >
        Small Button
      </div>
    </div>
  </button>
</div>
`;

exports[`Button > renders correctly with text button styling 1`] = `
<div>
  <button
    class="sc-bRKDuR bHjpxP sc-jJLAfE dtsDty"
  >
    <div
      class="sc-kNOymR AyWek"
    >
      <div
        class="sc-lgpSej dtnxRg childrenContainer"
      >
        Text Button
      </div>
    </div>
  </button>
</div>
`;

exports[`Button > renders correctly with trailing icon 1`] = `
<div>
  <button
    class="sc-bRKDuR bHjpxP sc-jJLAfE kgFfue"
  >
    <div
      class="sc-kNOymR cOHRID"
    >
      <div
        class="sc-lgpSej dtnxRg childrenContainer"
      >
        Trailing Icon
      </div>
    </div>
  </button>
</div>
`;
